// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test App component 1`] = `
<div
  className="App"
>
  <label>
    Material
    <select
      data-testid="Material"
      onChange={[Function]}
      value={0}
    >
      <option
        data-testid="select-option"
        value={0}
      >
         
        silver
         
      </option>
      <option
        data-testid="select-option"
        value={1}
      >
         
        gold
         
      </option>
      <option
        data-testid="select-option"
        value={2}
      >
         
        platinum
         
      </option>
    </select>
  </label>
  <label>
    Color
    <select
      data-testid="Color"
      onChange={[Function]}
      value={0}
    >
      <option
        data-testid="select-option"
        value={0}
      >
         
        white
         
      </option>
      <option
        data-testid="select-option"
        value={1}
      >
         
        metal
         
      </option>
      <option
        data-testid="select-option"
        value={2}
      >
         
        grey
         
      </option>
    </select>
  </label>
  <label>
    Fineness
    <select
      data-testid="Fineness"
      onChange={[Function]}
      value={0}
    >
      <option
        data-testid="select-option"
        value={0}
      >
         
        500
         
      </option>
      <option
        data-testid="select-option"
        value={1}
      >
         
        585
         
      </option>
      <option
        data-testid="select-option"
        value={2}
      >
         
        700
         
      </option>
    </select>
  </label>
  <label>
    Sizes
    <select
      data-testid="Sizes"
      onChange={[Function]}
      value={0}
    >
      <option
        data-testid="select-option"
        value={0}
      >
         
        23
         
      </option>
      <option
        data-testid="select-option"
        value={1}
      >
         
        15
         
      </option>
      <option
        data-testid="select-option"
        value={2}
      >
         
        10
         
      </option>
    </select>
  </label>
  <label>
    Engraving :
    <input
      data-testid="input"
      id="engraving"
      onChange={[Function]}
      type="text"
      value=""
    />
  </label>
  <label
    id="price"
  >
    Price: 
    0
  </label>
</div>
`;

exports[`Snapshot test Select component with materials 1`] = `
<label>
  Material
  <select
    data-testid="Material"
    onChange={[Function]}
    value={0}
  >
    <option
      data-testid="select-option"
      value={0}
    >
       
      silver
       
    </option>
    <option
      data-testid="select-option"
      value={1}
    >
       
      gold
       
    </option>
    <option
      data-testid="select-option"
      value={2}
    >
       
      platinum
       
    </option>
  </select>
</label>
`;

exports[`Snapshot test Select component with sizes 1`] = `
<label>
  Size
  <select
    data-testid="Size"
    onChange={[Function]}
    value={0}
  >
    <option
      data-testid="select-option"
      value={0}
    >
       
      23
       
    </option>
    <option
      data-testid="select-option"
      value={1}
    >
       
      15
       
    </option>
    <option
      data-testid="select-option"
      value={2}
    >
       
      10
       
    </option>
  </select>
</label>
`;
